--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="de">
   <head>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Simple Tasks Boilerplate" />
+    <meta
+      name="description"
+      content="Wieviel Mieteinnahmen brauchst du um deine Renditeziele zu erreichen? Mit diesem Rechner kannst du die nötige Miethöhe anhand deiner Kosten für dein Renditeziel errechnen. Anschließend werden dir, grundlegende Tipps mit auf den Weg gebracht."
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
